Fix layout issue

--- a/src/pages/buy/style.less
+++ b/src/pages/buy/style.less
@@ -58,7 +58,6 @@
   }
 }
 
-
 @media screen and (max-width: @screen-md-max) {
   .desc {
     padding: 0;
@@ -111,7 +110,7 @@
 
 .contract {
   width: 90%;
-  min-width: 700px;
+  // max-width: 700px;
   height: 380px;
   border-radius: 4px;
   border: solid 1px @text-color;
